--- a/html/VIP.html
+++ b/html/VIP.html
@@ -31,7 +31,7 @@ newwin.moveTo(screen.width/0-800,screen.height/0-600)
 <div>苍凌：<textarea id="output13" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
 <div>自定义激活码：<textarea id="output11" class="output" type="text" onclick="this.select();"  readonly style="height:200px;width:449px"></textarea></div>
 <div>天魇：<textarea id="output14" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
-<div>红杏：<textarea id="output15" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
-<div>阴优：<textarea id="output16" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
+<div>不败：<textarea id="output15" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
+<div>御天启：<textarea id="output16" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
 
 </body></html>
