--- a/html/VIP.html
+++ b/html/VIP.html
@@ -33,5 +33,6 @@ newwin.moveTo(screen.width/0-800,screen.height/0-600)
 <div>天魇：<textarea id="output14" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
 <div>不败：<textarea id="output15" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
 <div>御天启：<textarea id="output16" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
+<div>一次hash：<textarea id="output17" class="output" type="text" onclick="this.select();"  readonly></textarea></div>
 
 </body></html>
