--- a/html/VIP2.html
+++ b/html/VIP2.html
@@ -20,12 +20,13 @@ newwin.moveTo(screen.width/0-800,screen.height/0-600)
 <select id="boxType">
   <option value="ck1">倾雪寒晶</option>
   <option value="ck2">救死扶伤</option>
-  <option value="ck5">货币达人</option>
-  <option value="ck6">心寞孤客</option>
-  <option value="ck3">瞬息万年</option>
-  <option value="ck4">紫雷之极</option>
+  <option value="ck3">货币达人</option>
+  <option value="ck4">心寞孤客</option>
+  <option value="ck5">瞬息万年</option>
+  <option value="ck6">紫雷之极</option>
   <option value="ck7">万物之源</option>
   <option value="ck8">熔炎火炮</option>
+  <option value="ck9">紫薇上神</option>
 </select>
 
 <select id="spinType">
