--- a/html/VIP2.html
+++ b/html/VIP2.html
@@ -49,6 +49,8 @@ newwin.moveTo(screen.width/0-800,screen.height/0-600)
   <option value="sp28">翎翼浮灵</option>
   <option value="sp29">七阴之恸</option>
   <option value="sp210">谜幻逸空</option>
+  <option value="sp31">耀金独心</option>
+  <option value="sp32">绯想龙域</option>
 </select>
 
 <input id="achi1" type="text" value="成就:page" style="color:#999999;margin-top:60px;">
